--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <title>The CakeHouse</title>
+    <title>Cake and Coffee</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-xl fixed-top py-0 bg-gradient text-white nav-background">
